gccida/g2/cselib_invalidate_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_invalidate_rtx/src/cselib.c:1635:49: error: use of undeclared identifier 'machine_mode'
cselib_invalidate_regno( dest->fld[0].rtuint, ( machine_mode)*( ( unsigned __int8 *)dest + 2)); 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_invalidate_rtx/src/cselib.c:1636:29: error: use of undeclared identifier 'machine_mode'
if ( !push_operand( dest, ( machine_mode)*( ( unsigned __int8 *)dest + 2)) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_invalidate_rtx/src/cselib.c:1642:25: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse_noresize( hash_table_0, cselib_invalidate_mem_1, dest); 
                        ^~~~~~~~~~~~
                        hash_table
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_invalidate_rtx/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_invalidate_rtx/src/cselib.c:1643:28: error: use of undeclared identifier 'machine_mode'
if ( push_operand( dest, ( machine_mode)*( ( unsigned __int8 *)dest + 2)) ) 
                           ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_invalidate_rtx/src/obj/cselib.o] Error 1
